--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -3,9 +3,15 @@
 * such as colors, font stacks, etc.
 */
 
+// Colors
+$text-color: rgba(56,56,56,1);
+$main-color: rgba(39,170,225,1);
+$white: rgba(255,255,255,1);
+
 //Typography
 $base-font-size: 15px;
 $base-line-height: 24px;
 
 $heading-font-family: 'Titillium Web', sans-serif;
 $body-font-family: 'Titillium Web', sans-serif;
+$monospace-font-family: 'PT Mono', sans-serif;
