--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -12,6 +12,6 @@ $white: rgba(255,255,255,1);
 $base-font-size: 15px;
 $base-line-height: 24px;
 
-$heading-font-family: 'Titillium Web', sans-serif;
-$body-font-family: 'Titillium Web', sans-serif;
+$heading-font-family: 'Libre Baskerville', serif;
+$body-font-family: 'Libre Baskerville', serif;
 $monospace-font-family: 'PT Mono', sans-serif;
