--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -2,7 +2,9 @@
 @import "compass/reset";
 @import "susy";
 
+@import "personalMixin";
 @import "variables";
 @import "base";
 @import "typography";
 @import "grid";
+@import "article";
