--- a/css/styles.css
+++ b/css/styles.css
@@ -108,53 +108,60 @@ h1, h2, h3, h4, h5, h6 {
 h1 {
   font-size: 2.8em;
   line-height: 1.14286em;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 
-/* line 19, ../sass/_typography.scss */
+/* line 21, ../sass/_typography.scss */
 h2 {
   font-size: 2.6em;
   line-height: 1.23077em;
+  padding-top: 7px;
+  padding-bottom: 7px;
 }
 
-/* line 22, ../sass/_typography.scss */
+/* line 26, ../sass/_typography.scss */
 h3 {
   font-size: 2.26667em;
   line-height: 1.41176em;
 }
 
-/* line 25, ../sass/_typography.scss */
+/* line 29, ../sass/_typography.scss */
 h4 {
   font-size: 1.93333em;
   line-height: 1.65517em;
 }
 
-/* line 28, ../sass/_typography.scss */
+/* line 32, ../sass/_typography.scss */
 h5 {
   font-size: 1.6em;
   line-height: 2em;
 }
 
-/* line 31, ../sass/_typography.scss */
+/* line 35, ../sass/_typography.scss */
 h6 {
   font-size: 1.2em;
   line-height: 1.33333em;
 }
 
-/* line 35, ../sass/_typography.scss */
+/* line 39, ../sass/_typography.scss */
 h1.title {
   font-size: 3.06667em;
   line-height: 1.56522em;
   border-bottom: 1px solid #27aae1;
+  text-align: center;
+  padding-top: 15px;
+  padding-bottom: 15px;
 }
 
-/* line 39, ../sass/_typography.scss */
+/* line 46, ../sass/_typography.scss */
 code {
   font-family: "PT Mono", sans-serif;
   background-color: #27aae1;
   color: white;
 }
 
-/* line 44, ../sass/_typography.scss */
+/* line 51, ../sass/_typography.scss */
 p {
   font-family: "Libre Baskerville", serif;
   font-weight: 500;
@@ -162,17 +169,17 @@ p {
   line-height: 1.71429em;
 }
 
-/* line 49, ../sass/_typography.scss */
+/* line 56, ../sass/_typography.scss */
 a {
   font-family: "Libre Baskerville", serif;
 }
 
-/* line 52, ../sass/_typography.scss */
+/* line 59, ../sass/_typography.scss */
 strong {
   font-weight: 700;
 }
 
-/* line 55, ../sass/_typography.scss */
+/* line 62, ../sass/_typography.scss */
 em {
   font-style: italic;
 }
@@ -248,6 +255,11 @@ em {
 }
 
 /* line 37, ../sass/_grid.scss */
+.float-left {
+  float: left;
+}
+
+/* line 40, ../sass/_grid.scss */
 .float-right {
   float: right;
 }
@@ -256,5 +268,5 @@ em {
 /* line 2, ../sass/_article.scss */
 header {
   display: block;
-  margin-bottom: 1.2em;
+  margin-bottom: 5em;
 }
