--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -14,10 +14,14 @@ h1,h2,h3,h4,h5,h6 {
 }
 h1 {
   @include adjust-font-size-to(42px);
+	padding-top: 10px;
+	padding-bottom: 10px;
 }
 
 h2 {
   @include adjust-font-size-to(39px);
+	padding-top: 7px;
+	padding-bottom: 7px;
 }
 h3 {
   @include adjust-font-size-to(34px);
@@ -35,6 +39,9 @@ h6 {
 h1.title {
 	@include adjust-font-size-to(46px);
 	border-bottom: 1px solid $main-color;
+	text-align: center;
+	padding-top: 15px;
+	padding-bottom: 15px;
 }
 code {
 	font-family: $monospace-font-family;
