--- a/css/styles.css
+++ b/css/styles.css
@@ -149,39 +149,51 @@ h1.title {
   font-size: 3.06667em;
   line-height: 1.56522em;
   border-bottom: 1px solid #27aae1;
+  color: #27aae1;
   text-align: center;
   padding-top: 15px;
   padding-bottom: 15px;
+  text-shadow: #e5e7ea 1px 2px 1px;
 }
 
-/* line 46, ../sass/_typography.scss */
+/* line 48, ../sass/_typography.scss */
 code {
   font-family: "PT Mono", sans-serif;
   background-color: #27aae1;
   color: white;
 }
 
-/* line 51, ../sass/_typography.scss */
+/* line 53, ../sass/_typography.scss */
 p {
   font-family: "Libre Baskerville", serif;
   font-weight: 500;
   font-size: 0.93333em;
   line-height: 1.71429em;
-}
-
-/* line 56, ../sass/_typography.scss */
-a {
-  font-family: "Libre Baskerville", serif;
+  color: #383838;
 }
 
 /* line 59, ../sass/_typography.scss */
+a {
+  font-family: "Libre Baskerville", serif;
+  color: inherit;
+  text-decoration: none;
+  border-bottom: 1px dotted #27aae1;
+}
+
+/* line 65, ../sass/_typography.scss */
 strong {
   font-weight: 700;
 }
 
-/* line 62, ../sass/_typography.scss */
+/* line 68, ../sass/_typography.scss */
 em {
   font-style: italic;
+}
+
+/* Variations on the color */
+/* line 73, ../sass/_typography.scss */
+.text-complementar {
+  color: #ff4140;
 }
 
 /* line 10, ../sass/_grid.scss */
