--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -39,9 +39,11 @@ h6 {
 h1.title {
 	@include adjust-font-size-to(46px);
 	border-bottom: 1px solid $main-color;
+	color: $main-color;
 	text-align: center;
 	padding-top: 15px;
 	padding-bottom: 15px;
+	@include text-shadow($grey 1px 2px 1px);
 }
 code {
 	font-family: $monospace-font-family;
@@ -52,9 +54,13 @@ p {
 	font-family: $body-font-family;
 	font-weight: 500;
 	@include adjust-font-size-to(14px);
+	color: $text-color;
 }
 a {
 	font-family: $body-font-family;
+	color: inherit;
+	text-decoration: none;
+	border-bottom: 1px dotted $main-color;
 }
 strong {
 	font-weight: 700;
@@ -62,4 +68,8 @@ strong {
 em {
 	font-style: italic;
 }
+/* Variations on the color */
 
+.text-complementar {
+	color: $main-color-complementar;
+}
