--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -6,7 +6,10 @@
 // Colors
 $text-color: rgba(56,56,56,1);
 $main-color: rgba(39,170,225,1);
+$main-color-complementar: rgba(255,65,64,1);
 $white: rgba(255,255,255,1);
+$grey: rgba(229,231,234,1);
+$light-grey: rgba(229,231,234,0.4);
 
 //Typography
 $base-font-size: 15px;
