--- a/css/styles.css
+++ b/css/styles.css
@@ -1,287 +1,88 @@
-/* line 17, ../../../../../Ruby193/lib/ruby/gems/1.9.1/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font: inherit;
-  font-size: 100%;
-  vertical-align: baseline;
-}
+/*
+Syntax error: Invalid CSS after "	boder-color: ": expected expression (e.g. 1px, bold), was "@include backgr..."
+        on line 42 of c:/xampp/htdocs/zoomingin/zoomingin/sass/_typography.scss
+        from line 11 of c:/xampp/htdocs/zoomingin/zoomingin/sass/styles.scss
 
-/* line 22, ../../../../../Ruby193/lib/ruby/gems/1.9.1/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
-html {
-  line-height: 1;
-}
-
-/* line 24, ../../../../../Ruby193/lib/ruby/gems/1.9.1/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
-ol, ul {
-  list-style: none;
-}
-
-/* line 26, ../../../../../Ruby193/lib/ruby/gems/1.9.1/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
-
-/* line 28, ../../../../../Ruby193/lib/ruby/gems/1.9.1/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
-caption, th, td {
-  text-align: left;
-  font-weight: normal;
-  vertical-align: middle;
-}
-
-/* line 30, ../../../../../Ruby193/lib/ruby/gems/1.9.1/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
-q, blockquote {
-  quotes: none;
-}
-/* line 103, ../../../../../Ruby193/lib/ruby/gems/1.9.1/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
-q:before, q:after, blockquote:before, blockquote:after {
-  content: "";
-  content: none;
-}
-
-/* line 32, ../../../../../Ruby193/lib/ruby/gems/1.9.1/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
-a img {
-  border: none;
-}
-
-/* line 116, ../../../../../Ruby193/lib/ruby/gems/1.9.1/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
-article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section, summary {
-  display: block;
-}
-
-/**
-* In this file we put all the base variables,
-* such as colors, font stacks, etc.
+Backtrace:
+c:/xampp/htdocs/zoomingin/zoomingin/sass/_typography.scss:42
+c:/xampp/htdocs/zoomingin/zoomingin/sass/styles.scss:11
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.2.5/lib/sass/scss/parser.rb:1136:in `expected'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.2.5/lib/sass/script/lexer.rb:199:in `expected!'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.2.5/lib/sass/script/parser.rb:471:in `assert_expr'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.2.5/lib/sass/script/parser.rb:49:in `parse'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.2.5/lib/sass/scss/parser.rb:1010:in `sass_script'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.2.5/lib/sass/scss/parser.rb:870:in `value!'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.2.5/lib/sass/scss/parser.rb:847:in `declaration'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.2.5/lib/sass/scss/parser.rb:570:in `block in declaration_or_ruleset'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.2.5/lib/sass/scss/parser.rb:1110:in `call'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.2.5/lib/sass/scss/parser.rb:1110:in `rethrow'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.2.5/lib/sass/scss/parser.rb:580:in `declaration_or_ruleset'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.2.5/lib/sass/scss/parser.rb:542:in `block_child'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.2.5/lib/sass/scss/parser.rb:534:in `block_contents'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.2.5/lib/sass/scss/parser.rb:523:in `block'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.2.5/lib/sass/scss/parser.rb:517:in `ruleset'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.2.5/lib/sass/scss/parser.rb:541:in `block_child'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.2.5/lib/sass/scss/parser.rb:534:in `block_contents'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.2.5/lib/sass/scss/parser.rb:70:in `stylesheet'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.2.5/lib/sass/scss/parser.rb:27:in `parse'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.2.5/lib/sass/engine.rb:342:in `_to_tree'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.2.5/lib/sass/engine.rb:274:in `to_tree'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.2.5/lib/sass/tree/visitors/perform.rb:223:in `visit_import'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.2.5/lib/sass/tree/visitors/base.rb:37:in `visit'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.2.5/lib/sass/tree/visitors/perform.rb:98:in `visit'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.2.5/lib/sass/tree/visitors/base.rb:53:in `block in visit_children'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.2.5/lib/sass/tree/visitors/base.rb:53:in `map'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.2.5/lib/sass/tree/visitors/base.rb:53:in `visit_children'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.2.5/lib/sass/tree/visitors/perform.rb:107:in `block in visit_children'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.2.5/lib/sass/tree/visitors/perform.rb:119:in `with_environment'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.2.5/lib/sass/tree/visitors/perform.rb:106:in `visit_children'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.2.5/lib/sass/tree/visitors/base.rb:37:in `block in visit'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.2.5/lib/sass/tree/visitors/perform.rb:126:in `visit_root'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.2.5/lib/sass/tree/visitors/base.rb:37:in `visit'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.2.5/lib/sass/tree/visitors/perform.rb:98:in `visit'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.2.5/lib/sass/tree/visitors/perform.rb:7:in `visit'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.2.5/lib/sass/tree/root_node.rb:20:in `render'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.2.5/lib/sass/engine.rb:315:in `_render'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.2.5/lib/sass/engine.rb:262:in `render'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/compass-0.12.2/lib/compass/compiler.rb:140:in `block (2 levels) in compile'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/compass-0.12.2/lib/compass/compiler.rb:126:in `timed'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/compass-0.12.2/lib/compass/compiler.rb:139:in `block in compile'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/compass-0.12.2/lib/compass/logger.rb:45:in `red'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/compass-0.12.2/lib/compass/compiler.rb:138:in `compile'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/compass-0.12.2/lib/compass/compiler.rb:118:in `compile_if_required'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/compass-0.12.2/lib/compass/compiler.rb:103:in `block (2 levels) in run'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/compass-0.12.2/lib/compass/compiler.rb:101:in `each'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/compass-0.12.2/lib/compass/compiler.rb:101:in `block in run'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/compass-0.12.2/lib/compass/compiler.rb:126:in `timed'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/compass-0.12.2/lib/compass/compiler.rb:100:in `run'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/compass-0.12.2/lib/compass/commands/watch_project.rb:147:in `recompile'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/fssm-0.2.9/lib/fssm/path.rb:73:in `call'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/fssm-0.2.9/lib/fssm/path.rb:73:in `run_callback'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/fssm-0.2.9/lib/fssm/path.rb:55:in `callback_action'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/fssm-0.2.9/lib/fssm/path.rb:35:in `update'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/fssm-0.2.9/lib/fssm/state/directory.rb:39:in `block in modified'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/fssm-0.2.9/lib/fssm/state/directory.rb:37:in `each'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/fssm-0.2.9/lib/fssm/state/directory.rb:37:in `modified'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/fssm-0.2.9/lib/fssm/state/directory.rb:18:in `refresh'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/fssm-0.2.9/lib/fssm/backends/polling.rb:17:in `block (2 levels) in run'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/fssm-0.2.9/lib/fssm/backends/polling.rb:17:in `each'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/fssm-0.2.9/lib/fssm/backends/polling.rb:17:in `block in run'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/fssm-0.2.9/lib/fssm/backends/polling.rb:15:in `loop'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/fssm-0.2.9/lib/fssm/backends/polling.rb:15:in `run'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/fssm-0.2.9/lib/fssm/monitor.rb:26:in `run'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/fssm-0.2.9/lib/fssm.rb:70:in `monitor'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/compass-0.12.2/lib/compass/commands/watch_project.rb:87:in `perform'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/compass-0.12.2/lib/compass/commands/base.rb:18:in `execute'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/compass-0.12.2/lib/compass/commands/project_base.rb:19:in `execute'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/compass-0.12.2/lib/compass/exec/sub_command_ui.rb:43:in `perform!'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/compass-0.12.2/lib/compass/exec/sub_command_ui.rb:15:in `run!'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/compass-0.12.2/bin/compass:30:in `block in <top (required)>'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/compass-0.12.2/bin/compass:44:in `call'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/compass-0.12.2/bin/compass:44:in `<top (required)>'
+C:/Ruby193/bin/compass:23:in `load'
+C:/Ruby193/bin/compass:23:in `<main>'
 */
-/* line 4, ../sass/_personalMixin.scss */
-* ::-webkit-selection {
-  color: #27aae1;
-  background: white;
-}
-/* line 4, ../sass/_personalMixin.scss */
-* ::-moz-selection {
-  color: #27aae1;
-  background: white;
-}
-/* line 4, ../sass/_personalMixin.scss */
-* ::-o-selection {
-  color: #27aae1;
-  background: white;
-}
-/* line 4, ../sass/_personalMixin.scss */
-* ::selection {
-  color: #27aae1;
-  background: white;
-}
-
-/**
-* In this file we put all the typography
-* settings.
-*/
-/* line 7, ../sass/_typography.scss */
-html {
-  font-size: 100%;
-  line-height: 1.5em;
-}
-
-/* line 11, ../sass/_typography.scss */
-h1, h2, h3, h4, h5, h6 {
-  font-family: "Libre Baskerville", serif;
-  font-weight: 700;
-}
-
-/* line 15, ../sass/_typography.scss */
-h1 {
-  font-size: 2.8em;
-  line-height: 1.14286em;
-  padding-top: 10px;
-  padding-bottom: 10px;
-}
-
-/* line 21, ../sass/_typography.scss */
-h2 {
-  font-size: 2.6em;
-  line-height: 1.23077em;
-  padding-top: 7px;
-  padding-bottom: 7px;
-}
-
-/* line 26, ../sass/_typography.scss */
-h3 {
-  font-size: 2.26667em;
-  line-height: 1.41176em;
-}
-
-/* line 29, ../sass/_typography.scss */
-h4 {
-  font-size: 1.93333em;
-  line-height: 1.65517em;
-}
-
-/* line 32, ../sass/_typography.scss */
-h5 {
-  font-size: 1.6em;
-  line-height: 2em;
-}
-
-/* line 35, ../sass/_typography.scss */
-h6 {
-  font-size: 1.2em;
-  line-height: 1.33333em;
-}
-
-/* line 39, ../sass/_typography.scss */
-h1.title {
-  font-size: 3.06667em;
-  line-height: 1.56522em;
-  border-bottom: 1px solid #27aae1;
-  color: #27aae1;
-  padding-top: 15px;
-  padding-bottom: 15px;
-  text-shadow: #e5e7ea 1px 2px 1px;
-}
-/* line 46, ../sass/_typography.scss */
-h1.title a {
-  border: none;
-}
-
-/* line 50, ../sass/_typography.scss */
-code {
-  font-family: "PT Mono", sans-serif;
-  background-color: #27aae1;
-  color: white;
-}
-
-/* line 55, ../sass/_typography.scss */
-p {
-  font-family: "Libre Baskerville", serif;
-  font-weight: 500;
-  font-size: 0.93333em;
-  line-height: 1.71429em;
-  color: #383838;
-}
-
-/* line 61, ../sass/_typography.scss */
-a {
-  font-family: "Libre Baskerville", serif;
-  color: inherit;
-  text-decoration: none;
-  border-bottom: 1px dotted #27aae1;
-}
-
-/* line 67, ../sass/_typography.scss */
-strong {
-  font-weight: 700;
-}
-
-/* line 70, ../sass/_typography.scss */
-em {
-  font-style: italic;
-}
-
-/* Variations on the color */
-/* line 75, ../sass/_typography.scss */
-.text-complementar {
-  color: #ff4140;
-}
-
-/* line 10, ../sass/_grid.scss */
-.container {
-  *zoom: 1;
-  max-width: 34em;
-  _width: 34em;
-  padding-left: 1em;
-  padding-right: 1em;
-  margin-left: auto;
-  margin-right: auto;
-}
-/* line 38, ../../../../../Ruby193/lib/ruby/gems/1.9.1/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/utilities/general/_clearfix.scss */
-.container:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-@media (min-width: 55.3125em) {
-  /* line 10, ../sass/_grid.scss */
-  .container {
-    max-width: 59em;
-  }
-}
-
-@media (min-width: 55.3125em) {
-  /* line 17, ../sass/_grid.scss */
-  .banner {
-    padding-left: 16.94915%;
-  }
-
-  /* line 18, ../sass/_grid.scss */
-  .pagenav {
-    width: 15.25424%;
-    float: left;
-    margin-right: 1.69492%;
-  }
-
-  /* line 19, ../sass/_grid.scss */
-  .main {
-    width: 83.05085%;
-    float: right;
-    margin-right: 0;
-  }
-  /* line 22, ../sass/_grid.scss */
-  .main .content {
-    width: 69.38776%;
-    float: left;
-    margin-right: 2.04082%;
-  }
-  /* line 23, ../sass/_grid.scss */
-  .main .summary {
-    width: 28.57143%;
-    float: right;
-    margin-right: 0;
-  }
-}
-/* line 27, ../sass/_grid.scss */
-.contentinfo {
-  clear: both;
-  margin: 0 -1em;
-  padding: 0 1em;
-}
-@media (min-width: 55.3125em) {
-  /* line 27, ../sass/_grid.scss */
-  .contentinfo {
-    margin: 0;
-    padding-left: 16.94915%;
-    padding-right: 25.42373%;
-  }
-}
-
-/* line 37, ../sass/_grid.scss */
-.float-left {
-  float: left;
-}
-
-/* line 40, ../sass/_grid.scss */
-.float-right {
-  float: right;
-}
-
-/* Heading of the article */
-/* line 2, ../sass/_article.scss */
-header {
-  display: block;
-  margin-bottom: 5em;
-}
+body:before {
+  white-space: pre;
+  font-family: monospace;
+  content: "Syntax error: Invalid CSS after \"	boder-color: \": expected expression (e.g. 1px, bold), was \"@include backgr...\"\A         on line 42 of c:/xampp/htdocs/zoomingin/zoomingin/sass/_typography.scss\A         from line 11 of c:/xampp/htdocs/zoomingin/zoomingin/sass/styles.scss"; }
