--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -6,7 +6,7 @@
 // Headings
 html {
   font-size: 100%;
-  line-height: 1.5em;
+  line-height: $row-height*1.4;
 }
 h1,h2,h3,h4,h5,h6 {
 	font-family: $heading-font-family;
@@ -38,10 +38,11 @@ h6 {
 
 h1.title {
 	@include adjust-font-size-to(46px);
-	border-bottom: 1px solid $main-color;
+	border-bottom: 1px solid;
+	boder-color: @include background-image(left, rgba(0,0,0,0), rgba(0,0,0,0.75), rgba(0,0,0,0))
 	color: $main-color;
-	padding-top: 15px;
-	padding-bottom: 15px;
+	padding-top: $row-height*1.1;
+	padding-bottom: $row-height*1.1;
 	@include text-shadow($grey 1px 2px 1px);
 	a {
 		border: none;
@@ -60,9 +61,9 @@ p {
 }
 a {
 	font-family: $body-font-family;
-	color: inherit;
 	text-decoration: none;
 	border-bottom: 1px dotted $main-color;
+	@include link-colors(inherit, $main-color, $main-color, $main-color-complementar);
 }
 strong {
 	font-weight: 700;
