--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -5,8 +5,9 @@
 
 // Colors
 $text-color: rgba(56,56,56,1);
-$main-color: rgba(39,170,225,1);
-$main-color-complementar: rgba(255,65,64,1);
+$main-color: rgba(241,78,35,1); // Vivid Orange
+$main-color-complementar: rgba(71,143,58,1);
+$neutral-color: rgba(109,56,56,1);
 $white: rgba(255,255,255,1);
 $grey: rgba(229,231,234,1);
 $light-grey: rgba(229,231,234,0.4);
@@ -14,6 +15,7 @@ $light-grey: rgba(229,231,234,0.4);
 //Typography
 $base-font-size: 15px;
 $base-line-height: 24px;
+$row-height: 1.2em;
 
 $heading-font-family: 'Libre Baskerville', serif;
 $body-font-family: 'Libre Baskerville', serif;
