--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -1,3 +1,11 @@
 * {
 	@include selection($main-color,$white);
 }
+hr {
+	border: 0;
+	height: 1px;
+	@include background-image(linear-gradient(left,rgba(0,0,0,0),$light-grey,rgba(0,0,0,0)));
+}
+.clearfix {
+	@include legacy-pie-clearfix;
+}
