--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -39,10 +39,11 @@ h1.title {
 	color: $main-color;
 	padding-top: $row-height*0.2;
 	padding-bottom: $row-height*0.2;
-	@include text-shadow($grey 1px 2px 1px);
+	@include text-shadow(rgba($dark-grey,0.75) 1px 2px 1px);
 	a {
 		border: none;
-		color: $main-color;
+		color: $text-color;
+		background: $main-color;
 	}
 }
 code {
