--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -9,6 +9,7 @@ $main-color: rgba(241,78,35,1); // Vivid Orange
 $main-color-complementar: rgba(71,143,58,1);
 $neutral-color: rgba(109,56,56,1);
 $white: rgba(255,255,255,1);
+$dark-grey: rgba(133,133,133,1);
 $grey: rgba(229,231,234,1);
 $light-grey: rgba(229,231,234,0.4);
 
