--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -2,6 +2,7 @@
 @import "compass";
 @import "compass/reset";
 @import "susy";
+@import "sassy-buttons";
 
 /* Personal settings */
 @import "personalMixin";
